fix(docs): align document on left side

--- a/docs/src/assets/styles/common.css
+++ b/docs/src/assets/styles/common.css
@@ -70,11 +70,11 @@ body {
 
 .ant-doc-main-sider-menu.ant-menu-inline.ant-menu-inline .ant-menu-item-group-title {
   margin-left: var(--ant-margin-xxs);
-  padding-inline: 28px 12px !important;
+  padding-inline: 24px 12px !important;
 }
 
 .ant-doc-main-sider-menu.ant-menu-inline > .ant-menu-item {
-  padding-inline: 36px 12px !important;
+  padding-inline: 24px 12px !important;
 }
 
 ::view-transition-old(root),
